# reverse-proxy

./: .env.example  .gcloudignore  .gitignore  DEPLOYMENT.md  FRONTEND_CONFIGURATIONS.md  README.md  SERVICE_ACCOUNT_SETUP.md  cloudbuild-deploy.yaml  compose.yaml
.cloudbuild/: backend.yaml  cloudbuild-deploy.yaml  cloudbuild.yaml  frontend-proxy.yaml  frontend-static.yaml  frontend.yaml
backend/: main.py  pyproject.toml
deployment/: build-images.sh  deploy-backend.sh  deploy-cloudbuild.sh  deploy-frontend-proxy.sh  deploy-frontend-static.sh  deploy-terraform.sh  destroy.sh  setup-service-account.sh  setup.sh
frontend/: Dockerfile  analysis_options.yaml  docker-entrypoint.sh  proxy_params_common
frontend-common/: README.md  pubspec.yaml
frontend-proxy/: Dockerfile  lib  nginx.conf  pubspec.yaml  test  web
frontend-static/: Dockerfile
frontend/lib/: main.dart
terraform/: .gitignore  README.md  artifact_registry.tf  backend.tf  frontend.tf  locals.tf  main.tf  service_account.tf  terraform.tfvars.example  variables.tf
terraform/modules/frontend/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
